--- a/Front/ProEventos-App/src/app/components/eventos/evento-lista/evento-lista.component.html
+++ b/Front/ProEventos-App/src/app/components/eventos/evento-lista/evento-lista.component.html
@@ -1,75 +1,83 @@
 <div class="card rounded shadow-sm p-2">
-    <form class="d-flex">
-      <div class="flex-fill me-3">
-        <div class="input-group mb-2">
-          <input id="table-complete-search" type="text" class="form-control" name="searchTerm" placeholder="Buscar"
-            [(ngModel)]="filtroListaEventos" />
-        </div>
+  <form class="d-flex">
+    <div class="flex-fill me-3">
+      <div class="input-group mb-2">
+        <input id="table-complete-search" type="text" class="form-control" name="searchTerm" placeholder="Buscar"
+          [(ngModel)]="filtroListaEventos" />
       </div>
-      <div>
-        <a class="d-flex btn btn-outline-info" routerLink="../detalhe">
-          <i class="fa fa-plus-circle my-1 me-1"></i>
-          <b class="ms-1 d-none d-sm-block">Novo</b>
-        </a>
-      </div>
-    </form>
-  
-    <table class="table table-striped table-hover">
-      <thead class="table-primary">
-        <tr>
-          <th>#</th>
-          <th class="d-none d-md-table-cell">
-            <button class="btn btn-outline-light btn-sm" type="button" data-bs-toggle="collapse"
-              data-bs-target=".collapse-img" (click)="ocultarImagem()">
-              <i class="fa" [ngClass]="exibirImagem ? 'fa-eye-slash' : 'fa-eye'"></i>
-              Imagem
-            </button>
-          </th>
-          <th scope="col" sortable="name">Tema</th>
-          <th class="d-none d-md-table-cell" scope="col" sortable="name">Local</th>
-          <th>Data</th>
-          <th class="d-none d-md-table-cell">Qtd Pessoas</th>
-          <th class="d-none d-md-table-cell">Lote</th>
-          <th>Opções</th>
-        </tr>
-      </thead>
-      <tbody *ngIf="eventos && eventos.length; else noEvents">
-        <tr *ngFor="let evento of eventosFiltrados" class="align-middle selecionar-linha" (click)="detalheEvento(evento.id)">
-          <td>{{ evento.id }}</td>
-          <td class="d-none d-md-table-cell">
-            <div class="collapse collapse-img show">
-              <img src="/assets/{{evento.imagemUrl}}" alt="foto de {{evento.imagemUrl}}" [style.width.px]="larguraImagem">
-            </div>
-          </td>
-          <td>{{ evento.tema }}</td>
-          <td class="d-none d-md-table-cell">{{ evento.local }}</td>
-          <td>{{ evento.dataEvento | dateTimeFormatPipe }}</td>
-          <td class="d-none d-md-table-cell">{{ evento.quantidadeDePessoas }}</td>
-          <td class="d-none d-md-table-cell">{{ evento.lotes[0].nome }}</td>
-          <td class="">
-            <button type="button" class="btn btn-outline-success btn-sm me-2" tooltip="Editar" (click)="detalheEvento(evento.id)" aria-label="Editar">
-              <i class="fa fa-edit" aria-hidden="true"></i>
-            </button>
-            <button type="button" class="btn btn-outline-danger btn-sm" tooltip="Excluir" (click)="openModal(template)" aria-label="Excluir">
-              <i class="fa fa-trash" aria-hidden="true"></i>
-            </button>
-          </td>        
-        </tr>
-      </tbody>
-      <ng-template #noEvents>
-        <tfoot>
-          <tr>
-            <td colspan="8" class="text-center">Nenhum evento encontrado</td>
-          </tr>
-        </tfoot>
-      </ng-template>
-    </table>
-  </div>
-  
-  <ng-template #template>
-    <div class="modal-body text-center">
-      <p>Tem certeza que quer excluir este evento?</p>
-      <button type="button" class="btn btn-default" (click)="confirm()">Sim</button>
-      <button type="button" class="btn btn-primary" (click)="decline()">Não</button>
     </div>
-  </ng-template>
+    <div>
+      <a class="d-flex btn btn-outline-info" routerLink="../detalhe">
+        <i class="fa fa-plus-circle my-1 me-1"></i>
+        <b class="ms-1 d-none d-sm-block">Novo</b>
+      </a>
+    </div>
+  </form>
+
+  <table class="table table-striped table-hover">
+    <thead class="table-primary">
+      <tr>
+        <th>#</th>
+        <th class="d-none d-md-table-cell">
+          <button class="btn btn-outline-light btn-sm" type="button" data-bs-toggle="collapse"
+            data-bs-target=".collapse-img" (click)="ocultarImagem()">
+            <i class="fa" [ngClass]="exibirImagem ? 'fa-eye-slash' : 'fa-eye'"></i>
+            Imagem
+          </button>
+        </th>
+        <th scope="col" sortable="name">Tema</th>
+        <th class="d-none d-md-table-cell" scope="col" sortable="name">Local</th>
+        <th>Data</th>
+        <th class="d-none d-md-table-cell">Qtd Pessoas</th>
+        <th class="d-none d-md-table-cell">Lote</th>
+        <th>Opções</th>
+      </tr>
+    </thead>
+    <tbody *ngIf="eventos && eventos.length; else noEvents">
+      <tr *ngFor="let evento of eventosFiltrados" class="align-middle selecionar-linha"
+        (click)="detalheEvento(evento.id!)">
+        <td>{{ evento.id }}</td>
+        <td class="d-none d-md-table-cell">
+          <div class="collapse collapse-img show">
+            <img src="/assets/{{evento.imagemUrl}}" alt="foto de {{evento.imagemUrl}}" [style.width.px]="larguraImagem">
+          </div>
+        </td>
+        <td>{{ evento.tema }}</td>
+        <td class="d-none d-md-table-cell">{{ evento.local }}</td>
+        <td>{{ evento.dataEvento | dateTimeFormatPipe }}</td>
+        <td class="d-none d-md-table-cell">{{ evento.quantidadeDePessoas }}</td>
+        <td class="d-none d-md-table-cell">
+          {{ evento.lotes && evento.lotes.length > 0 ? evento.lotes[0].nome : '-' | uppercase }}
+        </td>
+        <td>
+          <button type="button" class="btn btn-outline-success btn-sm me-2" tooltip="Editar"
+            (click)="detalheEvento(evento.id!)" aria-label="Editar">
+            <i class="fa fa-edit" aria-hidden="true"></i>
+          </button>
+          <button 
+            type="button" class="btn btn-outline-danger btn-sm" 
+            tooltip="Excluir" 
+            (click)="openModal($event, template, evento.tema, evento.id!)"
+            aria-label="Excluir">
+            <i class="fa fa-trash" aria-hidden="true"></i>
+          </button>
+        </td>
+      </tr>
+    </tbody>
+    <ng-template #noEvents>
+      <tfoot>
+        <tr>
+          <td colspan="8" class="text-center">Nenhum evento encontrado</td>
+        </tr>
+      </tfoot>
+    </ng-template>
+  </table>
+</div>
+
+<ng-template #template>
+  <div class="modal-body text-center">
+    <p>Tem certeza que deseja excluir o evento "{{this.eventoTema}}"?</p>
+    <button type="button" class="btn btn-default" (click)="confirm()">Sim</button>
+    <button type="button" class="btn btn-primary" (click)="decline()">Não</button>
+  </div>
+</ng-template>
