--- a/Front/ProEventos-App/src/app/components/eventos/evento-lista/evento-lista.component.html
+++ b/Front/ProEventos-App/src/app/components/eventos/evento-lista/evento-lista.component.html
@@ -39,7 +39,7 @@
         <td>{{ evento.id }}</td>
         <td class="d-none d-md-table-cell">
           <div class="collapse collapse-img show">
-            <img src="/assets/{{evento.imagemUrl}}" alt="foto de {{evento.imagemUrl}}" [style.width.px]="larguraImagem">
+            <img [src]="mostrarImagem(evento.imagemUrl)" alt="foto de {{evento.imagemUrl}}" [style.width.px]="larguraImagem">
           </div>
         </td>
         <td>{{ evento.tema }}</td>
